[🚀 사이클2 - 미션 (블랙잭 베팅 기능)] 모카 미션 제출합니다. (#1078)
* docs : 기능 구현 목록 수정

* feat : 블랙잭 승 추가

* feat : 베팅기능 추가

* refactor : 중간 Map 제거 및 수익 계산 메서드 분리

* test : 블랙잭 판정 규칙 테스트 추가

- 처음 두 장의 합이 21이면 블랙잭인지 검증
- 세 장의 합이 21이어도 블랙잭이 아닌지 검증
- 처음 두 장의 합이 21이 아니면 블랙잭이 아닌지 검증

* feat : 처음 두 장 기준 블랙잭 판정 기능

- Player가 Hand의 블랙잭 판정 결과를 위임하도록 구현
- Hand에 카드 수와 총합 기준의 블랙잭 판정 로직 추가
- 블랙잭 규칙 관련 테스트 통과

* fix : 블랙잭 승패 판정 버그 수정

- 단순 21점이 아닌 처음 두 장 기준으로 블랙잭을 판정하도록 수정
- 세 장의 합이 21인 경우 일반 승리로 처리되도록 변경
- BlackJackJudge 테스트로 블랙잭 배당 규칙 검증

* test: 덱 draw 동작 테스트 추가

- draw 호출 시 1개 감소하는지 검증

* test: 게임 시작 시 초기 카드 분배 테스트 추가

* test : 특정 시작 카드 조합 기반 게임 테스트 추가

- 테스트에서는 원하는 카드 순서를 가진 덱을 직접 생성할 수 있도록 생성자 추가
- 특정 카드 조합 기반의 게임 테스트 작성이 가능하도록 구조 개선
-  랜덤 셔플에 의존하지 않고 테스트용 덱으로 게임 시작 상황을 고정

* chore: .DS_Store 파일 제거 및 gitignore 추가

* feat: BetAmount 원시값 포장 클래스 추가

* refactor: Player 생성자에서 BetAmount 주입하도록 변경 및 setter 제거

* refactor: BlackJackController에서 Player 생성 시 BetAmount 주입하도록 변경

* fix: 플레이어 블랙잭과 딜러 일반21 동점 시 판정 순서 수정

* test: BetAmount 반영 및 BlackJackJudgeTest 시나리오 추가

* test: 불필요한 @Disabled 테스트 제거

* refactor : Name 원시값 초장 클래스 추가

* refactor : 불필요한 메서드 제거 및  메서드 길이를 10줄 이하로 유지하기 위해 로직 분리

* refactor : 메서드 길이 줄이기 위해 로직 분리

* refactor: System.lineSeparator() 적용 및 출력 로직 중복 제거

* refactor: GameResult에 수익 계산 책임 위임

- BlackJackJudge의 calculateIncome()에 분산되어 있던 if-else 분기를GameResult로 응집
- BlackJackJudge에서 calculateIncome() 메서드 제거 후 위임 호출로 교체

* refactor: ShuffleStrategy 전략 패턴 도입으로 Deck 셔플 제어 분리

- 테스트를 위한 Deck(List<Card>) 우회 생성자 제거 후,셔플 전략을 외부에서 주입받는 구조로 변경
- Deck 기본 생성자는 RandomShuffleStrategy 위임으로 기존 동작 유지
- BlackJackGameTest에서 Deck(List) 우회 생성자 → FixedOrderShuffleStrategy 교체

* refactor: domain 클래스를 성격별 하위 패키지로 분리

단일 domain 패키지에 집중된 클래스들을 책임 기준으로 분리
- card: 카드 속성 및 Hand
- deck: 덱 생성/관리 및 ShuffleStrategy
- participant: 게임 참여자 및 값객체(Name, BetAmount)
- game: 게임 규칙, 흐름, 결과

* chore: .DS_Store 파일 git 추적에서 제거

* sytle : 파일 포맷팅 수정